--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     </h4>
     
     <img src="handsTucked.jpg" width=400 alt="Chef tucker with his hands tucked">
+    <img src="excited.gif" height="400" width="300" alt="man getting excited to eat tukers food yay!">
+    <h3>Recipes to chow down when you feel let down, there!</h3>
 
     <ul>
-        <li><a href="recipes/momo.html"> momo <a/> </li>
+        <li><a href="recipes/jellied-chicken.html"> jellied-chicken <a/> </li>
         <li>*</li>
         <li>*</li>
         <li>*</li>
