Fix minor typos

--- a/recipes/jellied-chicken.html
+++ b/recipes/jellied-chicken.html
@@ -37,10 +37,10 @@
         </p>
 
         <ol>
-            <li>Take an iron pan and heat it on medium-high heat</li>
+            <li>Take an iron pan and heat it on medium-high</li>
             <li>Add a cup of water, a pinch of salt and 10ml of your tears cause why are you still here?</li>
-            <li>Mix the milk, swiss cheese and the Sauerkraut with pleas stop</li>
-            <li>Grind some chicken with jello powder and add it in the pan</li>
+            <li>Mix the milk, swiss cheese and the Sauerkraut with please stop</li>
+            <li>Grind some chicken with jello powder and add it to the pan</li>
             <li>After a hot minute, add the milk mixture to the pan and go see a therapist</li>
         </ol>
         <h3>Your jellied chicken is ready, ENJOY!</h3>
