--- a/recipes/jellied-chicken.html
+++ b/recipes/jellied-chicken.html
@@ -45,7 +45,7 @@
         </ol>
         <h3>Your jellied chicken is ready, ENJOY!</h3>
         <p>
-            <strong></strong><a href="../index.html">Homepage</a></strong>
+            <strong><a href="../index.html">Homepage</a></strong>
         </p>
 
     
