Fix typo and removed unused image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!--- change all the * to the actual value-->
     <h4>
-        Chef Han-d Tucker shares with recipes from his home town undertuck county, America.
+        Chef Han-d Tucker shares recipes from his home town undertuck county, America.
     </h4>
     
     <img src="handsTucked.jpg" width=400 alt="Chef tucker with his hands tucked">
