complete remaining recipes and other minor changes

--- a/recipes/a-better-person.html
+++ b/recipes/a-better-person.html
@@ -2,11 +2,50 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <Title>a-better-person</Title>
+        <Title>A-better-person</Title>
     </head>
 
     <body>
-        <h1>Recipe to become a better person</h1>
+        <h1>Recipe to become a <em>better</em> person</h1>
+
+        <img src="images/aBetterPerson.jpg" width="510" height="382" alt="Art of a woman hugging a heart">
+
+        <h4>Out of all the recipes, you are my favorite</h4>
+
+        <p>
+            Life sometimes feels like a messed up recipe, a recipe that has turned out to be a disaster.
+            Everyone's recipe of life is different. Sometimes you are soaring higher than clouds and sometimes
+            you feel so low that you loose the courage to keep fighting. We all have been through shit, we all know 
+            that life is not always easy but what we all should know is that giving up and letting go is never the answer.
+            Lets make a recipe, a recipe that will make you a better version of <em>yourself!</em>
+        </p>
+
+        <h4>Things required:</h4>
+        <ul>
+            <li>An open mind</li>
+            <li>And the willingness to change</li>
+        </ul>
+
+        <h4>Steps:</h4>
+        <p>
+            You may feel like i am undermining you and assuming that you need to become a better person, as if you
+            are not already a better person. If you think that you already are someone that the 9 year old you would adore
+            then congratulations, nothing wrong with sticking along ey?
+        </p>
+
+        <ol>
+            <li>Identify your weaknesses</li>
+            <li>Learn to control your impulses and keep a calm mind</li>
+            <li>Accept that the only thing you can control are your actions</li>
+            <li>Do not let other peoples choices affect you</li>
+            <li>Always love yourself but never be full of yourself</li>
+        </ol>
+
+        <h4>There, You are already a better person!</h4>
+        
+        <br>
+            <strong><a href="../index.html">Homepage</a></strong> 
+
     </body>
 
 </html>
